Compositor: Viewport issues when Passepartout is off #111345

Closed
opened 2023-08-21 15:00:55 +02:00 by Dalai Felinto · 1 comment

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-21 10:12, hash: f0a8c1946162
Worked: never

Short description of error
Composition Mask is "rendered" wrongly in the viewport when the camera Passepartout is off.
Note that the Compositor is set to Camera.

Exact steps for others to reproduce the error

  • Open this file: zoomed_out.blend
  • Notice that the passepartout is disabled in this camera, but the viewport compositor is set to Camera.

Current buggy result:
image

The mask only matches when the camera has Passepartout on:
image

Related: #111344

**Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-21 10:12, hash: `f0a8c1946162` Worked: never **Short description of error** Composition Mask is "rendered" wrongly in the viewport when the camera `Passepartout` is off. Note that the Compositor is set to Camera. **Exact steps for others to reproduce the error** * Open this file: [zoomed_out.blend](/attachments/863028ea-6396-49f2-8643-a89a572e680b) * Notice that the passepartout is disabled in this camera, but the viewport compositor is set to Camera. Current buggy result: ![image](/attachments/37d2c4b3-1408-4dc2-a45b-b9f69a58659b) The mask only matches when the camera has `Passepartout` on: ![image](/attachments/2cb441d2-2fa1-4706-acb2-ddf0a0dcb263) Related: #111344
Dalai Felinto added this to the Compositing project 2023-08-21 15:00:58 +02:00
Germano Cavalcante added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-21 19:10:28 +02:00

I can confirm the error.

I can confirm the error.
Sergey Sharybin removed this from the Compositing project 2023-09-06 10:37:40 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-15 15:46:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111345
No description provided.