source/blender/nodes/composite/nodes/node_composite_viewer.cc
@@ -123,7 +123,9 @@ class ViewerOperation : public NodeOperation {
      * write into that compositing region. */
     const rcti compositing_region = context().get_compositing_region();
     const int2 lower_bound = int2(compositing_region.xmin, compositing_region.ymin);
+    const int2 upper_bound = int2(compositing_region.xmax, compositing_region.ymax);
     GPU_shader_uniform_2iv(shader, "lower_bound", lower_bound);
+    GPU_shader_uniform_2iv(shader, "upper_bound", upper_bound);
 
     const Result &image = get_input("Image");
     image.bind_as_texture(shader, "input_tx");
@@ -151,7 +153,9 @@ class ViewerOperation : public NodeOperation {
      * write into that compositing region. */
     const rcti compositing_region = context().get_compositing_region();
     const int2 lower_bound = int2(compositing_region.xmin, compositing_region.ymin);
+    const int2 upper_bound = int2(compositing_region.xmax, compositing_region.ymax);
     GPU_shader_uniform_2iv(shader, "lower_bound", lower_bound);
+    GPU_shader_uniform_2iv(shader, "upper_bound", upper_bound);
 
     const Result &image = get_input("Image");
     image.bind_as_texture(shader, "input_tx");
@@ -179,7 +183,9 @@ class ViewerOperation : public NodeOperation {
      * write into that compositing region. */
     const rcti compositing_region = context().get_compositing_region();
     const int2 lower_bound = int2(compositing_region.xmin, compositing_region.ymin);
+    const int2 upper_bound = int2(compositing_region.xmax, compositing_region.ymax);
     GPU_shader_uniform_2iv(shader, "lower_bound", lower_bound);
+    GPU_shader_uniform_2iv(shader, "upper_bound", upper_bound);
 
     const Result &image = get_input("Image");
     image.bind_as_texture(shader, "input_tx");
